# Gols_Brasileir-o

./: README.md  load_csv.py  pyproject.toml
src/interface/classes/: csv_class_load.py
